# src/api/swagger.json
@@ -66,9 +66,17 @@
                     "200": {
                         "statusCode": "200",
                         "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/id"
+                        "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/loginResult"
+                            }
                         }
+                    }
+                    },
+                    "400": {
+                        "statusCode": "400",
+                        "description": "Invalid email or password"
                     },
                     "500": {
                         "statusCode": "500",
@@ -104,11 +112,20 @@
                         "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/definitions/newUserData"
+                                "$ref": "#/definitions/newUserResult"
                             }
                         }
                     }
                     },
+                     "400": {
+                        "statusCode": "400",
+                        "description": "Bad Request"
+                    },
+                    "409": {
+                        "statusCode": "409",
+                        "description": "Conflict Result"
+                    },
+
                     "500": {
                         "statusCode": "500",
                         "description": "Server Errors"
@@ -137,23 +154,20 @@
                     "application/json"
                 ],
                 "responses": {
-                    "200": {
+                    "204": {
                         "statusCode": "200",
-                        "description": "Ok",
-                        "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/definitions/forgotPassword"
-                            }
-                        }
-                    }
+                        "description": "No Content Result"
+                        
                     },
+                     "400": {
+                        "statusCode": "400",
+                        "description": "Bad Request"
+                    },  
                     "500": {
                         "statusCode": "500",
                         "description": "Server Errors"
                     }
-                }
-            }
+                } }
         },    
         "/users/change-password":{
             "post": {
@@ -176,16 +190,13 @@
                     "application/json"
                 ],
                 "responses": {
-                    "200": {
-                        "statusCode": "200",
-                        "description": "Ok",
-                        "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/definitions/changePassword"
-                            }
-                        }
-                    }
+                    "204": {
+                        "statusCode": "204",
+                        "description": "No Content Result"  
+                    },
+                    "400": {
+                        "statusCode": "400",
+                        "description": "Bad Request"
                     },
                     "500": {
                         "statusCode": "500",
@@ -223,13 +234,25 @@
                 "responses": {
                     "200": {
                         "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/userDetails"
+                        "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/userDetailsResult"
+                            }
                         }
+                    }
+                    },
+                    "400": {
+                        "statusCode": "400",
+                        "description": "Bad Request"
                     },
                     "404": {
                         "statusCode": "404",
                         "description": "User not found"
+                    },
+                    "500": {
+                        "statusCode": "500",
+                        "description": "Server errors"
                     }
                 }
             },
@@ -244,7 +267,7 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/definitions/Cat"
+                                "$ref": "#/definitions/userDetails"
                             }
                         }
                     }
@@ -253,28 +276,33 @@
                     {
                         "in": "path",
                         "name": "userId",
-                        "required": true,
-                        "description": "Cat with new values of properties",
-                        "schema": {
-                            "$ref": "#/definitions/id"
-                        }
+                        "required": true
+                        
                     }
+                    
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/Cat"
+                        "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/userDetailsResult"
+                            }
                         }
+                    }
                     },
                     "400": {
-                        "description": "Failed. Bad post data.",
-                        "schema": {
-                            "$ref": "#/definitions/Cat"
-                        }
+                        "statusCode": "400",
+                        "description": "Bad Request"
                     },
                     "404": {
-                        "description": "Failed. Cat not found."
+                        "statusCode": "404",
+                        "description": "User not found"
+                    },
+                    "500": {
+                        "statusCode": "500",
+                        "description": "Server errors"
                     }
                 }
             }
@@ -295,7 +323,15 @@
                             }
                         }
                     }
-                  }
+                  },
+                  "400": {
+                        "statusCode": "400",
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "statusCode": "500",
+                        "description": "Server Errors"
+                    }
               }
           
             }
@@ -444,6 +480,7 @@
             }
         }   
     },
+
     "definitions": {
         "loginData":{
             "type": "object",
@@ -501,6 +538,48 @@
               }
             }
         },
+        "userDetails":{
+            "type": "object",
+            "properties": {
+              "newUserData":{
+                "type": "object",
+                "properties": {
+                  "email": {
+                      "type": "string"
+                  },
+                  "name": {
+                      "type": "string"
+                  },
+                  "phone": {
+                      "type": "string"
+                  },
+                  "role": {
+                      "type": "array",
+                      "items": {
+                        "type":"string"
+                      }
+                  },
+                  "ratingAverage": {
+                      "type": "number"
+                  },
+                  "address":{
+                    "type": "object",
+                    "properties": {
+                      "city": {
+                          "type": "string"
+                      },
+                      "district": {
+                          "type": "string"
+                      },
+                      "commune": {
+                          "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+        },
         "changePassword":{
             "type": "object",
             "properties": {
@@ -514,6 +593,123 @@
                     "type": "string"
                 }
               }}
+            }
+        },
+        "loginResult":{
+            "type": "object",
+            "properties": {
+              "statusCode":{
+                "type": "number"
+              },
+              "payload": {
+                "type": "string"
+              }                     
+            }
+        
+        },
+        "Users":{
+            "type": "object",
+            "properties": {
+              "statusCode":{
+                "type": "number"
+              },
+              "payload": {
+                "type": "array",
+                      "items": {
+                        "$ref": "#/definitions/userDetailsResult"
+                      }
+              }                     
+            }
+        
+        },
+        "newUserResult":{
+            "type": "object",
+            "properties": {
+              "statusCode":{
+                "type": "number"
+              },
+              "payload":{
+                "type": "object",
+                "properties": {
+                  "email": {
+                      "type": "string"
+                  },
+                  "name": {
+                      "type": "string"
+                  },
+                  "phone": {
+                      "type": "string"
+                  },
+                  "address":{
+                    "type": "object",
+                    "properties": {
+                      "city": {
+                          "type": "string"
+                      },
+                      "district": {
+                          "type": "string"
+                      },
+                      "commune": {
+                          "type": "string"
+                      }
+                    }
+                  },
+                  "_id": {
+                      "type": "string"
+                  },
+                  "role": {
+                      "type": "array",
+                      "items": {
+                        "type":"string"
+                      }
+                  }
+                }
+              }
+            }
+        },
+        "userDetailsResult":{
+            "type": "object",
+            "properties": {
+              "statusCode":{
+                "type": "number"
+              },
+              "payload":{
+                "type": "object",
+                "properties": {
+                  "email": {
+                      "type": "string"
+                  },
+                  "name": {
+                      "type": "string"
+                  },
+                  "role": {
+                      "type": "array",
+                      "items": {
+                        "type":"string"
+                      }
+                  },
+                  "phone": {
+                      "type": "string"
+                  },
+                  "address":{
+                    "type": "object",
+                    "properties": {
+                      "city": {
+                          "type": "string"
+                      },
+                      "district": {
+                          "type": "string"
+                      },
+                      "commune": {
+                          "type": "string"
+                      }
+                    }
+                  },
+                  "ratingAverage": {
+                      "type": "number"
+                  }
+                }
+              }
             }
         },
         "id": {
